<resources>
    <string name="app_name">TaskManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


    <string name="home">Home</string>>
    <string name="profile">Profile</string>
    <string name="tasks">Tasks</string>
    <string name="sign_out">Sign Out</string>
    <string name="pending_task">Pending Task</string>
    <string name="completed">Completed</string>


    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>


    <!--    Home Fragment-->
    <string name="current_category">Current Category</string>

    <!--    Task Assignment-->
    <string name="task_title">Enter Task Title</string>
    <string name="task_description">Enter Task Description</string>
    <string name="task_priority">Task Priority</string>

    <!--    Date Pick-->
    <string name="start_date_msg">Pick Start Date ....</string>
    <string name="due_date_msg">Pick Due Date ....</string>
    <string name="assign">Task Priority</string>


    <!--    google sign in-->

<!--    <string name="default_web_client_id">426645351295-9bo4evej8ape3pjiqa8nvr1f43lmvb92.apps.googleusercontent.com</string>-->


</resources>