<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:enabled="true"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/tasks" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/sign_out" />

    </group>
</menu>